# bazel-rustfmt-ignore

./: .bazelrc  .gitignore  WORKSPACE.bazel  bazel-bazel-rustfmt-ignore  readme.md  rustc-ice-2024-06-19T19_56_06-25544.txt  rustfmt.toml
crates/app/: BUILD.bazel
